--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "antd": "^4.16.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-owl-carousel": "^2.3.3",
+    "react-responsive-carousel": "^3.2.20",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-sticky": "^6.0.3",
